--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="icon" href="./images/d82d87bba4cc0796a82bb1169a30c601.jpg">
+    <link rel="icon" href="./images/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,11 +14,22 @@
   <body>
 
     <header class="header">
+      <span class="toggler" onclick="toggleSidebar()"></span>
+      <div class="header__mobile__popup">
+        <a class="header__mobile__popup__logo" href=""></a>
+        <a class="header__mobile__popup__item" href="#gallery">Галерея</a>
+        <a class="header__mobile__popup__item" href="#events">Виставки та події</a>
+        <a class="header__mobile__popup__item" href="#action">Відвідування</a>
+        <a class="header__mobile__popup__item" href="#footer">Стати нашим другом</a>
+        <a class="header__mobile__popup__item" href="#footer">Про Нас</a>
+        <a class="header__mobile__popup__item" href="#footer">Магазин</a>
+        <a class="header__mobile__popup__item" href="#footer">Блог</a>
+        <a class="header__mobile__popup__item" href="#footer">Контакти</a>
+      </div>
       <div class="header__line">
         <a href="" class="header__line-text">ПОДІЇ</a>
       </div>
       <div class="header__left-wrap">
-        <span class="toggler"></span>
         <div class="header__content">
           <h1 class="header__title">
             ХУДОЖ
@@ -28,7 +39,7 @@
           </h1>
           <h1 class="header__title-mobile">ХУДОЖНIЙ МУЗЕЙ</h1>
         </div>
-        <a class="header__button" href="">Квитки</a>
+        <a class="header__button" href="https://www.google.com/">Квитки</a>
       </div>
       <div class="header__right-wrap">
         <img
@@ -38,7 +49,7 @@
         >
         <img
           class="header__logo"
-          src="./images/NA MU.png"
+          src="./images/logo.png"
           alt="Logo"
         >
       </div>
@@ -49,6 +60,7 @@
         <h2 class="event__h2">
           Актуальні події
         </h2>
+        <a name="events"></a>
         <div class="event__fitst">
           <div class="event__content-wrap">
             <img
@@ -92,6 +104,7 @@
         </div>
       </div>
       <div class="leacture">
+        <a name="action"></a>
         <div class="leacture__block">
           <div class="leacture__wrap">
             <div class="leacture__date">
@@ -99,12 +112,14 @@
               <p class="leacture__item-2">26/08/2019 - 11:00</p>
             </div>
             <p class="leacture__text">Від класицизму до<br>романтизму</p>
+            <p class="leacture__text leacture__text__mob">Від класицизму<br>до романтизму</p>
           </div>
         </div>
       </div>
       <div class="gallery">
         <div class="gallery__wrap">
           <h2 class="gallery__h2">Галерея</h2>
+          <a name="gallery"></a>
           <div class="gallery__first-line">
             <div class="gallery__item-1"></div>
             <div class="gallery__item-2"></div>
@@ -115,6 +130,42 @@
             <div class="gallery__item-5"></div>
             <div class="gallery__item-6"></div>
           </div>
+        </div>
+        <div class="gallery__carousel-wrapper">
+          <input
+            type="radio"
+            checked=""
+            id="slide1"
+            class="gallery__carousel-input gallery__carousel-input--1"
+            name="carousel-item"
+          >
+          <input
+            type="radio"
+            id="slide2"
+            class="gallery__carousel-input gallery__carousel-input--2"
+            name="carousel-item"
+          >
+          <input
+            type="radio"
+            id="slide3"
+            class="gallery__carousel-input gallery__carousel-input--3"
+            name="carousel-item"
+          >
+          <input
+            type="radio"
+            id="slide4"
+            class="gallery__carousel-input gallery__carousel-input--4"
+            name="carousel-item"
+          >
+          <ul class="gallery__carousel-labels">
+            <li class="gallery__carousel-label">
+              <label class="gallery__carousel-item" for="slide1"></label>
+            </li> <li class="gallery__carousel-label">
+              <label class="gallery__carousel-item" for="slide2"></label>
+            </li> <li class="gallery__carousel-label"> <label class="gallery__carousel-item" for="slide3"></label>
+            </li> <li class="gallery__carousel-label"> <label class="gallery__carousel-item" for="slide4"></label>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="subscribing">
@@ -135,68 +186,74 @@
     </main>
 
     <footer class="footer">
-
-      <div class="footer__content-wrap">
-        <div class="footer__left">
-          <div class="footer__items">
-            <img
-              class="footer__logo"
-              src="./images/NA MU.png"
-              alt=""
-            >
-            <div class="footer__soc">
-              <img
-                class="footer__facebook"
-                src="./images/Facebook.svg"
-                alt=""
-              >
-              <img
-                class="footer__insta"
-                src="./images/insta.svg"
-                alt=""
-              >
+      <div class="footer__container">
+        <div class="footer__media">
+          <a href="#" class="logo footer__logo"></a>
+          <div class="footer__links">
+            <a href="https://www.facebook.com" class="footer__link-fb"></a>
+            <a href="https://www.instagram.com" class="footer__link-insta"></a>
+          </div>
+        </div>
+        <div class="footer__content">
+          <a name="footer"></a>
+          <div class="footer__info">
+            <div class="footer__schedule" id="schedule">
+              <p class="footer__schedule-title">Графік роботи</p>
+              <span class="footer__schedule-time"> <strong>12:00 — 20:00</strong> середа </span>
+              <span class="footer__schedule-time"> <strong>12:00 — 20:00</strong> четвер </span>
+              <span class="footer__schedule-time"> <strong>12:00 — 20:00</strong> п’ятниця </span>
+              <span class="footer__schedule-time"> <strong>12:00 — 20:00</strong> субота </span>
+              <span class="footer__schedule-time"> <strong>11:00 — 19:00</strong> неділя </span>
+              <p class="footer__schedule-paragraph"> Вихідні понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею </p>
+            </div>
+            <div class="footer__contacts" id="contacts">
+              <p class="footer__contacts-title">Контакти:</p>
+              <a href="https://goo.gl/maps/6MjEe7FqvtzhxBtAA" class="footer__contacts-address">вул. М. Грушевського, 6; Київ, 01001</a>
+              <a href="tel:+38 (044) 278-13-57" class="footer__contacts-phone">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+38 (044) 278-74-54" class="footer__contacts-fax">факс +38 (044) 278-74-54</a>
+              <a href="mailto: info@namu.kiev.ua" class="footer__contacts-email">e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
-          <div class="footer__schedule">
-            <h4 class="footer__schedule-t">Графік роботи</h4>
-            <p class="footer__schedule-s footer__schedule-s-first">12:00 — 20:00 <span class="footer__schedule-t">середа</span></p>
-            <p class="footer__schedule-s">12:00 — 20:00 <span class="footer__schedule-t">четвер</span></p>
-            <p class="footer__schedule-s">12:00 — 20:00 <span class="footer__schedule-t">п’ятниця</span></p>
-            <p class="footer__schedule-s">11:00 — 19:00 <span class="footer__schedule-t">субота</span></p>
-            <p class="footer__schedule-s footer__schedule-s-last">11:00 — 19:00 <span class="footer__schedule-t">неділя</span></p>
-            <p class="footer__schedule-t"><span class="footer__schedule-s">Вихідні</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br>до закриття музею</p>
-          </div>
-          <div class="footer__contacts">
-            <h4 class="footer__schedule-t footer__h4">Контакти:</h4>
-            <p class="footer__schedule-t">
-              вул. М. Грушевського, 6; Київ, 01001
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
-            </p>
-          </div>
-        </div>
-        <div class="footer__right">
-          <div class="footer__nav-l">
-            <a class="footer__link" href="">Галерея</a>
-            <a class="footer__link" href="">Виставки та події</a>
-            <a class="footer__link" href="">Відвідування</a>
-            <a class="footer__link" href="">Стати нашим другом</a>
-          </div>
-          <div class="footer__nav-r">
-            <a class="footer__link" href="">Про Нас</a>
-            <a class="footer__link" href="">Магазин</a>
-            <a class="footer__link" href="">Блог</a>
-            <a class="footer__link" href="">Контакти</a>
+          <div class="nav footer__nav">
+            <nav class="nav__left-part">
+              <ul class="nav__item">
+                <li class="nav__list">
+                  <a class="nav__link" href="#gallery">Галерея</a>
+                </li>
+                <li class="nav__list">
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+                <li class="nav__list">
+                  <a class="nav__link" href="#action">Відвідування</a>
+                </li>
+                <li class="nav__list">
+                  <a class="nav__link" href="#footer">Стати нашим другом</a>
+                </li>
+              </ul>
+            </nav>
+            <nav class="nav__right-part">
+              <ul class="nav__item">
+                <li class="nav__list">
+                  <a class="nav__link" href="#footer">Про Нас</a>
+                </li>
+                <li class="nav__list">
+                  <a class="nav__link" href="#footer">Магазин</a>
+                </li> <li class="nav__list">
+                  <a class="nav__link" href="#footer">Блог</a>
+                </li>
+                <li class="nav__list">
+                  <a class="nav__link" href="#footer">Контакти</a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
-      <div class="footer__b3">
-        <p class="footer__licens">Copyright © 2019. All Rights Reserved.</p>
-        <p class="footer__licens">Designed by Zhyriada Marina</p>
-      </div>
+      <div class="footer__bottom">
+        <p class="footer__designer">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
