--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   <body>
 
     <header class="header">
-      <span class="toggler" onclick="toggleSidebar()"></span>
+      <div class="header__togler-wrap" onclick="toggleSidebar()">
+        <span class="toggler"></span>
+      </div>
       <div class="header__mobile__popup">
         <a class="header__mobile__popup__logo" href=""></a>
         <a class="header__mobile__popup__item" href="#gallery">Галерея</a>
