add some changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <title>Museum</title>
+    <link rel="icon" href="./images/logo.png">
+    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
@@ -26,7 +27,7 @@
 
         <nav class="nav__bar">
           <ul class="nav__list">
-            
+
             <li class="nav__item">
               <a class="nav__link" href="#events">Виставки та події</a>
             </li>
@@ -283,7 +284,7 @@
         MU
       </p>
 
-      <div class="footer__social">
+      <div class="footer__socialFI">
         <a href="https://www.facebook.com">
           <img src="./images/footer_facebook.svg" alt="Facebook link">
         </a>
@@ -292,7 +293,7 @@
         </a>
       </div>
 
-      <div class="footer__schedule">
+      <div class="footer__schedule" id="schedule">
         <p class="footer__text">
           Графік роботи
         </p>
@@ -346,7 +347,7 @@
         <a class="footer__text" href="#events">
           Виставки та події
         </a>
-        <a class="footer__text" href="">
+        <a class="footer__text" href="#schedule">
           Відвідування
         </a>
         <a class="footer__text" href="#subscription">
