--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,55 @@
             class="gallery__photo6"
           >
         </div>
-        <div class="gallery__switch"></div>
+
+        <div class="gallery__carousel">
+
+          <div class="gallery__arrows">
+            <button class="gallery__arrow prev"></button>
+            <button class="gallery__arrow next"></button>
+          </div>
+
+          <div class="gallery__switch">
+            <ul class="gallery__switch-images">
+              <li class="gallery__switch-items">
+                <img
+                  src="./images/photo1.svg"
+                  alt="woman"
+                  class="gallery__switch-photos"
+                >
+              </li>
+              <li class="gallery__switch-items">
+                <img
+                  src="./images/photo5.svg"
+                  alt="park"
+                  class="gallery__switch-photos"
+                >
+              </li>
+              <li class="gallery__switch-items">
+                <img
+                  src="./images/photo6.svg"
+                  alt="sea"
+                  class="gallery__switch-photos"
+                >
+              </li>
+              <li class="gallery__switch-items">
+                <img
+                  src="./images/photo3.svg"
+                  alt="sea"
+                  class="gallery__switch-photos"
+                >
+              </li>
+              <li class="gallery__switch-items">
+                <img
+                  src="./images/photo2.svg"
+                  alt="woman"
+                  class="gallery__switch-photos"
+                >
+              </li>
+            </ul>
+          </div>
+
+        </div>
       </div>
 
       <div class="sub container__sub">
@@ -283,8 +331,6 @@
       </footer>
 
     </div>
-
     <script type="text/javascript" src="scripts/main.js"></script>
-
   </body>
 </html>
