--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="icon" href="./images/NA MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Oswald:wght@300;400&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
