--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <ul class="nav__list">
 
               <li class="nav__item">
-                <a href="#" class="nav__link">Home
+                <a href="#" class="nav__link">На головну
                 </a>
               </li>
               <li class="nav__item">
@@ -275,13 +275,13 @@
           </a>
 
           <div class="footer__soc-links">
-            <a href="" class="footer__fb-link">
+            <a href="https://www.facebook.com/namu.museum/" class="footer__fb-link">
               <img
                 src="images/fb.svg"
                 alt="Facebook"
                 class="footer__fb">
             </a>
-            <a href="" class="footer__ig-link">
+            <a href="https://www.instagram.com/namu.museum/" class="footer__ig-link">
               <img
                 src="images/ig.svg"
                 alt="Instagram"
