--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
           MU
         </a>
         <a href="#events" class="header__link">ПОДІЇ</a>
-        <div class="header__toggler toggler"></div>
+        <div class="header__toggler toggler">
+          <div class="toggler__line"></div>
+        </div>
 
         <nav class="header__nav nav">
           <a href="#" class="nav__logo">
