minor bugs fixed

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/NAMU.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -20,6 +21,55 @@
             <img src="./images/museum_photo.png" alt="Museum picture">
           </picture>
         </div>
+        <div class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#events" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#main-event" class="nav__link">
+                Відвідування
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#subscription" class="nav__link">
+                Стати нашим другом
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+              Про Нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Магазин
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Блог
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Контакти
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                <img src="./images/search-icon.svg" alt="search">
+              </a>
+            </li>
+          </ul>
+        </div>
         <div class="header__container">
           <div class="header__burger burger">
             <input type="checkbox" id="check-menu">
@@ -34,50 +84,6 @@
               <a class="burger__link" href="#main-event">Відвідування</a>
               <a class="burger__link" href="#subscription">Стати нашим другом</a>
             </nav>
-          </div>
-          <div class="header__nav nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#gallery" class="nav__link">
-                  Галерея
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#events" class="nav__link">
-                  Виставки та події
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#main-event" class="nav__link">
-                  Відвідування
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#subscription" class="nav__link">
-                  Стати нашим другом
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                Про Нас
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Магазин
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Блог
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Контакти
-                </a>
-              </li>
-            </ul>
           </div>
           <p class="header__events"><a href="#events">ПОДІЇ</a></p>
           <h1 class="header__name">ХУДОЖ<span class="header__name-transparent">НІЙ</span></span><br>МУЗЕЙ</h1>
@@ -239,6 +245,5 @@
         </div>
       </footer>
     </div>
-    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
   </body>
 </html>
