--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,277 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/scss.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Museum</title>
+        <link rel="stylesheet" href="./styles/main.scss">
+      </head>
+      <body>
+        <header class="header">
+          <section class="header__section section">
+            <div class="header__main">
+              <h1 class="header__title">ХУДОЖ<span class="header__title-span">НІЙ</span><br> МУЗЕЙ</h1>
+              <div class="header__btn">
+                <a href="#" class="header__button"><span class="header__button-text">КВИТКИ</span><span class=" header__button-span">&#10095;</span>
+                </a>
+              </div>
+              <p class="header__event">ПОДІЇ</p>
+            </div>
+            <div class="header__photo">
+              <img
+                class="header__img"
+                src="\images\museum.png"
+                alt="museum"
+              >
+              <span class="header__logo">NA<br>MU</span>
+            </div>
+          </section>
+        </header>
+
+        <main class="main">
+          <section class="main__section section">
+            <h2 class="main__title">Актуальні події</h2>
+            <div class="main__event event main__event--top">
+              <img
+                class="event__img"
+                src="\images\nature.png"
+                alt="nature"
+              >
+              <div class="event__card">
+                <div class="event__caption">
+                  <p class="event__exhibition">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь
+                </h3>
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+            <div class="main__event event main__event--bottom">
+              <div class="event__card event__card--bottom">
+                <div class="event__caption">
+                  <p class="event__exhibition">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">І спогади і мрії
+                </h3>
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+              <img
+                class="event__img event__img--bottom"
+                src="\images\girl.png"
+                alt="girl"
+              >
+            </div>
+          </section>
+
+          <section class="main__section section">
+            <div class="main__lection lection">
+              <div class="lection__card">
+                <div class="lection__caption">
+                  <p class="lection__name">ЛЕКЦІЯ</p>
+                  <p class="lection__date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="lection__title">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </section>
+
+          <section class="main__section section">
+            <h2 class="main__title">Галерея</h2>
+            <div class="main__gallery gallery">
+              <img
+                src="\images\1.png"
+                alt="retro ukrainian girl"
+                class="gallery__img gallery__img--girl"
+              >
+              <img
+                src="\images\2.png"
+                alt="winter in village"
+                class="gallery__img gallery__img--house"
+              >
+              <img
+                src="\images\3.png"
+                alt="gooses"
+                class="gallery__img gallery__img--goose"
+              >
+              <img
+                src="\images\4.png"
+                alt="children in park"
+                class="gallery__img gallery__img--park"
+              >
+              <img
+                src="\images\5.png"
+                alt="beach"
+                class="gallery__img gallery__img--beach"
+              >
+              <img
+                src="\images\6.png"
+                alt="consultation in village"
+                class="gallery__img gallery__img--village"
+              >
+            </div>
+          </section>
+
+          <section class="main__section section">
+            <div class="main__follow follow">
+              <div class="follow__article">
+                <h2 class="follow__title">Підписка</h2>
+                <p class="follow__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+              </div>
+              <form
+                class="follow__form"
+                action="#"
+                method="post"
+              >
+                <label for="email">
+                  <input
+                    class="follow__input"
+                    type="email"
+                    id="email"
+                    placeholder="E-mail"
+                    required
+                  >
+                  <button class="follow__button">&#10095;</button>
+                </label>
+              </form>
+            </div>
+          </section>
+        </main>
+
+        <footer class="footer">
+          <section class="footer__section section">
+            <div class="footer__container">
+              <div class="footer__info">
+                <div class="info__left">
+                  <div class="footer__icons">
+                    <div class="footer__logo">NA<br>MU</div>
+                    <div class="footer__socials">
+                      <img
+                        class="footer__icon"
+                        src="\images\Facebook.png"
+                        alt="facebook"
+                      >
+                      <img
+                        class="footer__icon"
+                        src="\images\insta.png"
+                        alt="insta"
+                      >
+                    </div>
+                  </div>
+                  <div class="footer__schedule schedule">
+                    <h3 class="schedule__title">Графік роботи</h3>
+                    <div class="schedule__list">
+                      <p class="schedule__item">
+                        <span class="schedule__span">
+                          12:00 — 20:00
+                        </span>
+                        середа
+                      </p>
+                      <p class="schedule__item">
+                        <span class="schedule__span">
+                          12:00 — 20:00
+                        </span>
+                        четвер
+                      </p>
+                      <p class="schedule__item">
+                        <span class="schedule__span">
+                          12:00 — 20:00
+                        </span>
+                        п’ятниця
+                      </p>
+                      <p class="schedule__item">
+                        <span class="schedule__span">
+                          11:00 — 19:00
+                        </span>
+                        субота
+                      </p>
+                      <p class="schedule__item">
+                        <span class="schedule__span">
+                          11:00 — 19:00
+                        </span>
+                        неділя
+                      </p>
+                    </div>
+                    <p class="schedule__weekend">
+                      Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину <br> до закриття музею
+                    </p>
+                  </div>
+                  <div class="footer__contacts contacts">
+                    <h3 class="contacts__title">Контакти:</h3>
+                    <div class="contacts__list">
+                      <p class="contacts__item">
+                        <a href="mailto:https://goo.gl/maps/fzn5assdd9b3KAGH9" class="contacts__link">
+                        вул. М. Грушевського, 6; Київ, 01001
+                        </a>
+                      </p>
+                      <p class="contacts__item">
+                        <a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57
+                        </a>
+                      </p>
+                      <p class="contacts__item">
+                        <a href="tel:+38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
+                      </p>
+                      <p class="contacts__item">
+                        <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="info__right">
+                  <nav class="footer__nav nav">
+                    <ul class="nav__left nav__list">
+                      <li class="nav__item">
+                        <a href="#gallery" class="nav__link">Галерея</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#event" class="nav__link">Виставки та події</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#lection" class="nav__link">Відвідування</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#follow" class="nav__link">Стати нашим другом</a>
+                      </li>
+                    </ul>
+                  </nav>
+                  <nav class="nav__right nav__list">
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Про Нас</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Магазин</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Блог</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Контакти</a>
+                    </li>
+                  </nav>
+                </div>
+              </div>
+            </div>
+            <div class="footer__bottom">
+              <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+              <p class="footer__text">Designed by Zhyriada Marina</p>
+            </div>
+          </section>
+        </footer>
+        <script type="text/javascript" src="scripts/main.js"></script>
+      </body>
+    </html>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
