--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/scss.scss">
   </head>
   <body>
@@ -38,7 +38,7 @@
         </header>
 
         <main class="main">
-          <section class="main__section section">
+          <section class="main__section section" id="event">
             <h2 class="main__title">Актуальні події</h2>
             <div class="main__event event main__event--top">
               <img
@@ -79,7 +79,7 @@
           </section>
 
           <section class="main__section section">
-            <div class="main__lection lection">
+            <div class="main__lection lection" id="lection">
               <div class="lection__card">
                 <div class="lection__caption">
                   <p class="lection__name">ЛЕКЦІЯ</p>
@@ -90,7 +90,7 @@
             </div>
           </section>
 
-          <section class="main__section section">
+          <section class="main__section section" id="gallery">
             <h2 class="main__title">Галерея</h2>
             <div class="main__gallery gallery">
               <img
@@ -127,7 +127,7 @@
           </section>
 
           <section class="main__section section">
-            <div class="main__follow follow">
+            <div class="main__follow follow" id="follow">
               <div class="follow__article">
                 <h2 class="follow__title">Підписка</h2>
                 <p class="follow__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
