--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,335 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700& family=Ubuntu:wght@700&display=swap"
+      rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__left">
+        <p class="header__text">Події</p>
+        <h1 class="header__title">
+          Худож<span class="header__title-transparent">ній</span> музей
+        </h1>
+        <a href="#" class="header__link">
+          <span class="header__link-text">Квитки</span><span class="header__link-arrow">&#10095</span>
+        </a>
+      </div>
+      <div class="header__right">
+        <img
+          src="\images\header-img.png"
+          alt="Національй художній музей України"
+          class="header__img"
+        >
+        <p class="header__logo">
+          Na<br>Mu
+        </p>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="main__section">
+        <div class="main__events events">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+          <img
+            src="\images\events-img.png"
+            alt="Пейзаж з морем та горами"
+            class="events__img"
+          >
+          <div class="events__info">
+            <div class="events__info-type">
+              <p class="events__type-name">
+                Виставка
+              </p>
+              <p class="events__type-time">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <div class="events__info-description">
+              <h3 class="events__subtitle">
+                Йду і повертаюсь
+              </h3>
+              <p class="events__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
+                половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="main__events events events--position">
+          <div class="events__info events__info--position">
+            <div class="events__info-type">
+              <p class="events__type-name">
+                Виставка
+              </p>
+              <p class="events__type-time">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <div class="events__info-description">
+              <h3 class="events__subtitle events__subtitle--posiotion">
+                І спогади і мрії
+              </h3>
+              <p class="events__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+          <img
+            src="\images\girl-img.png"
+            alt="Дівчина присіла біля павлінів"
+            class="events__img"
+          >
+        </div>
+      </section>
+
+      <section class="main__section">
+        <div class="description">
+          <div class="description__info">
+            <p class="description__name">
+              Лекція
+            </p>
+            <p class="description__time">
+              26/08/2019 - 11:00
+            </p>
+            <h3 class="description__subtitle">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__section">
+        <div class="gallery">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="gallery__container">
+            <img
+              src="\images\girls.png"
+              alt="Дівчата в традиційному одягу"
+              class="gallery__img gallery__img--position-top-left"
+            >
+            <img
+              src="\images\house.png"
+              alt="Людина на повозці біля будинку"
+              class="gallery__img gallery__img--position-top-mid"
+            >
+            <img
+              src="\images\goose.png"
+              alt="Гуси вертаються додому"
+              class="gallery__img gallery__img--position-top-right"
+            >
+            <img
+              src="\images\park.png"
+              alt="Дівчина сидить на лавці в парку"
+              class="gallery__img gallery__img--position-bottom-left"
+            >
+            <img
+              src="\images\sea.png"
+              alt="Морський пейзаж"
+              class="gallery__img gallery__img--position-bottom-mid"
+            >
+            <img
+              src="\images\peoples.png"
+              alt="Люди сперечаються"
+              class="gallery__img gallery__img--position-bottom-right"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="main__section">
+        <div class="subscription">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form action="#" class="subscription__form form">
+            <label for="email"></label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="form__email"
+              placeholder="E-mail"
+            >
+            <input
+              type="button"
+              value="&#10095"
+              class="form__button"
+            >
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <section class="footer__section">
+        <div class="footer__connection-container">
+          <div class="footer__links links">
+            <p class="links__logo">
+              Na<br>Mu
+            </p>
+            <div class="links__photos">
+              <a href="#" class="links__socials">
+                <img
+                  src="\images\facebook.png"
+                  alt="facebook logo"
+                  class="links__img"
+                >
+              </a>
+              <a href="#" class="links__socials">
+                <img
+                  src="\images\instagram.png"
+                  alt="instagram logo"
+                  class="links__img"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="footer__schedule schedule">
+            <p class="schedule__title">
+              Графік роботи
+            </p>
+            <p class="schedule__hours">
+              <span
+              class="schedule__hours--font-weight"
+              >
+                12:00 — 20:00
+              </span>
+              середа
+            </p>
+            <p class="schedule__hours">
+              <span
+                class="schedule__hours--font-weight"
+              >
+                12:00 — 20:00
+              </span>
+              четвер
+            </p>
+            <p class="schedule__hours">
+              <span
+                class="schedule__hours--font-weight"
+              >
+                12:00 — 20:00
+              </span>
+              п’ятниця
+            </p>
+            <p class="schedule__hours">
+              <span
+                class="schedule__hours--font-weight"
+              >
+                11:00 — 19:00
+              </span>
+              субота
+            </p>
+            <p class="schedule__hours">
+              <span
+                class="schedule__hours--font-weight"
+              >
+                11:00 — 19:00
+              </span> неділя
+            </p>
+            <p class="schedule__text">
+              <span
+                class="schedule__text--font-weight"
+              >
+                Вихідні
+              </span>
+              понеділок,<br> вівторок<br>
+              Каса припиняє роботу за<br> 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts contacts">
+            <p class="contacts__title">
+              Контакти:
+            </p>
+            <a
+              href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593?hl=ru"
+              class="contacts__links"
+            >
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="contacts__links">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="tel:+38 (044) 278-74-54" class="contacts__links">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__links">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+        <div class="footer__menu">
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__copyright">
+          <p class="footer__copyright-text footer__copyright-text--position">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+          <p class="footer__copyright-text">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </section>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
