--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <span class="header__logo">na<br>mu</span>
+      <input
+        type="checkbox"
+        class="header__toggler"
+        id="nav-toggler"
+        >
+      <label for="nav-toggler" class="header__toggler-label">
+        <span></span>
+      </label>
+      <nav class="header__nav nav">
+      </nav>
+    </header>
+
+    <main>
+      <div class="art-museum">
+        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <button class="art-museum__btn">КВИТКИ<span data-icon=""></span></button>
+      </div>
+
+      <div class="current-events">
+        <h2 class="current-events__heading">Актуальні події</h2>
+        <section class="current-events__article article">
+          <img
+            src="/images/current-events/1.jpeg"
+            alt="picture"
+            class="article__img"
+          >
+          <div class="article__exhibition exhibition">
+            <h3 class="exhibition__title">ВИСТАВКА</h3>
+            <p class="exhibition__date">26.08-29.11.2019</p>
+          </div>
+          <h2 class="article__heading">Йду і повертаюсь
+          </h2>
+          <p class="article__text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </section>
+        <section class="current-events__article article">
+          <img
+            src="/images/current-events/2.jpeg"
+            alt="picture"
+            class="article__img"
+          >
+          <div class="article__exhibition exhibition">
+            <h3 class="exhibition__title">ВИСТАВКА</h3>
+            <p class="exhibition__date">26.08-29.11.2019</p>
+          </div>
+          <h2 class="article__heading">І спогади і мрії
+          </h2>
+          <p class="article__text">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </section>
+      </div>
+
+      <!-- <div class="romantism">
+        <img
+          src ="/images/romantism/1.jpeg"
+          class="romantism__img"
+          alt="picture"
+        >
+        <div class="romantism__lection lection">
+          <h3 class="lection__title">ЛЕКЦІЯ</h3>
+          <p class="lection__date">26/08/2019 - 11:00</p>
+        </div>
+        <h3 class="romantism__heading">Від класицизму до романтизму</h3>
+      </div>
+
+      <div class="gallery">
+        <h2 class="gallery__heading">Галерея</h2>
+        <img src="/images/gallery/1.jpeg" alt="picture">
+      </div> -->
+
+      <div class="subscribe">
+        <h2 class="subscribe__heading">Підписка</h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <!-- linthtml-disable indent-width -->
+        <form
+          action="#"
+          method="POST"
+          class="subscribe__form form"
+        >
+          <input
+            type="text"
+            placeholder="E-mail"
+            class="form__input"
+          ><button class="form__button"><img src="/images/vector.svg" alt="picture"></button>
+        </form>
+        <!-- linthtml-enable indent-width -->
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
