first commit - mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,6 @@
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <!-- linthtml-disable indent-width -->
         <form
           action="#"
           method="POST"
@@ -100,9 +99,9 @@
             type="text"
             placeholder="E-mail"
             class="form__input"
-          ><button class="form__button"><img src="/images/vector.svg" alt="picture"></button>
+          >
+          <button class="form__button"><img src="/images/vector.svg" alt="picture"></button>
         </form>
-        <!-- linthtml-enable indent-width -->
       </div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
