--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,167 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Художній музей</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.gstatic.com">-->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+
+      <div class="header__image"></div>
+
+      <p class="title header__title">Худож<span class="title__decor">ній</span><br>музей</p>
+
+      <div class="menu header__menu">
+        <div class="menu__item"></div>
+        <div class="menu__item"></div>
+        <div class="menu__item"></div>
+      </div>
+      <span class="namu header__namu">Na<br>mu</span>
+
+      <div class="header__tickets">
+        <span class="tickets">
+          Квитки
+        </span>
+        <button class="button">
+          >
+        </button>
+      </div>
+
+      <span class="events header__events">
+        Події
+      </span>
+    </header>
+
+    <main>
+      <section class="section">
+        <div class="exhibition section__actual">
+          <h1 class="heading exhibition__heading">
+            Актуальні події
+          </h1>
+
+          <div class="exhibition__block exhibition__block--left">
+            <div class="exhibition__img exhibition__img--left"></div>
+            <div class="exhibition__main exhibition__main--left">
+              <div class="exhibition__top">
+                <p class="exhibition__label">
+                  Виставка
+                </p>
+                <p class="exhibition__dates">
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <div class="exhibition__title">
+                Йду і повертаюсь
+              </div>
+              <div class="exhibition__text">
+                <p>
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="exhibition__block exhibition__block--right">
+            <div class="exhibition__main exhibition__main--right">
+              <div class="exhibition__top">
+                <p class="exhibition__label">
+                  Виставка
+                </p>
+                <p class="exhibition__dates">
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <div class="exhibition__title">
+                І спогади, і мрії
+              </div>
+              <div class="exhibition__text">
+                <p>
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+            <div class="exhibition__img exhibition__img--right"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="lecture section__lecture">
+          <div class="lecture__main">
+            <div class="lecture__top">
+              <p class="lecture__label">
+                Лекція
+              </p>
+              <p class="lecture__dates">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <p class="lecture__title">
+              Від класицизму до романтизму
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="gallery section__gallery">
+          <h1 class="heading gallery__heading">
+            Галерея
+          </h1>
+
+          <div class="photos photos__first">
+            <img
+              src="./images/ph1.png"
+              alt=""
+              class="photos__img photos__img--1"
+            >
+            <img
+              src="./images/ph2.png"
+              alt=""
+              class="photos__img photos__img--2"
+            >
+            <img
+              src="./images/ph3.png"
+              alt=""
+              class="photos__img photos__img--3"
+            >
+          </div>
+
+          <div class="dots photos__dots">
+            <div class="dots__item dots__item--active"></div>
+            <div class="dots__item"></div>
+            <div class="dots__item"></div>
+            <div class="dots__item"></div>
+          </div>
+
+          <div class="photos photos__second">
+            <img
+              src="./images/ph4.png"
+              alt=""
+              class="photos__img photos__img--4"
+            >
+            <img
+              src="./images/ph5.png"
+              alt=""
+              class="photos__img photos__img--5"
+            >
+            <img
+              src="./images/ph6.png"
+              alt=""
+              class="photos__img photos__img--6"
+            >
+          </div>
+
+        </div>
+
+      </section>
+
+    </main>
+
   </body>
 </html>
