--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__left">
+        <p class="header__text">Події</p>
+        <h1 class="header__title">
+          Худож<span class="header__title-transparent">ній</span> музей
+        </h1>
+        <a href="#" class="header__link">
+          <span class="header__link-text">Квитки</span><span class="header__link-arrow">&#10095</span>
+        </a>
+      </div>
+      <div class="header__right">
+        <img
+          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          alt="National art museum"
+          class="header__img"
+        >
+        <p class="header__logo">
+          Na
+          <br>Mu
+        </p>
+      </div>
+    </header>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
