--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="burger">
+        <span></span>
+      </div>
+      <div class="header__elem">
+        Події
+      </div>
+      <div class="header__info">
+        <h1 class="header__title">
+          Худож<span class="header__span">ній</span><br>музей
+        </h1>
+        <a class="header__link" href="#">
+          <span class="header__text">
+            Квитки
+          </span>
+          <span class="header__arrow fas fa-chevron-right"></span>
+        </a>
+      </div>
+      <div class="header__photo">
+        <img class="header__img"
+          src="./images/Header-img.png"
+          alt="Художній музей">
+        <div class="header__logo">
+          Na<br>mu
+        </div>
+        <span class="header__transparent">ній</span>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="https://kit.fontawesome.com/fbd2e65cde.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
