--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__background"></div>
+      <div class="header__logo"></div>
+      <div class="header__burger"></div>
+      <div class="header__title"></div>
+      <div class="header__buy">
+        <button class="button">
+          <div class="button__text">Купити</div>
+          <div class="button__arrow">></div>
+        </button>
+      </div>
+    </header>
+    <nav id="menu">
+
+    </nav>
   </body>
 </html>
