media min-width:768px

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@
   </head>
   <body>
     <header class="header">
-      <span class="header__logo">na<br>mu</span>
+      <img
+        src="/images/header.jpg"
+        alt="header"
+        class="header__img"
+      >
+      <span class="header__logo logo">na<br>mu</span>
       <input
         type="checkbox"
         class="header__toggler"
@@ -67,23 +72,48 @@
         </section>
       </div>
 
-      <!-- <div class="romantism">
+      <div class="romantism">
         <img
           src ="/images/romantism/1.jpeg"
           class="romantism__img"
           alt="picture"
         >
         <div class="romantism__lection lection">
-          <h3 class="lection__title">ЛЕКЦІЯ</h3>
-          <p class="lection__date">26/08/2019 - 11:00</p>
+          <div class="lection__wrap">
+            <h3 class="lection__title">ЛЕКЦІЯ</h3>
+            <p class="lection__date">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="lection__heading">Від класицизму до романтизму</h3>
         </div>
-        <h3 class="romantism__heading">Від класицизму до романтизму</h3>
       </div>
 
       <div class="gallery">
-        <h2 class="gallery__heading">Галерея</h2>
-        <img src="/images/gallery/1.jpeg" alt="picture">
-      </div> -->
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+        <div class="gallery__container">
+          <img
+            src="\images\gallery\1.jpeg"
+            alt="picture"
+            class="gallery__img"
+          >
+          <img
+            src="\images\gallery\2.jpg"
+            alt="picture"
+            class="gallery__img"
+          >
+          <img
+            src="\images\gallery\3.jpg"
+            alt="Дівчина сидить на лавці в парку"
+            class="gallery__img"
+          >
+          <img
+            src="\images\gallery\4.jpg"
+            alt="Морський пейзаж"
+            class="gallery__img"
+          >
+        </div>
+      </div>
 
       <div class="subscribe">
         <h2 class="subscribe__heading">Підписка</h2>
@@ -104,6 +134,141 @@
         </form>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="footer__left">
+        <div class="footer__media media">
+          <span class="media__logo">na<br>mu</span>
+          <div class="media__links links">
+            <a href="#" class="links__item">
+              <img
+              src="/images/media-icons/facebook.svg" alt="facebook"
+              >
+            </a>
+            <a href="#" class="links__item">
+              <img
+              src="/images/media-icons/instagram.svg" alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__information information">
+          <div class="information__timetable timetable">
+            <h4 class="timetable__title">Графік роботи</h4>
+            <p class="timetable__time">
+              <span class="timetable__time--bold">
+                12:00 — 20:00
+              </span>
+              середа
+            </p>
+            <p class="timetable__time">
+              <span class="timetable__time--bold">
+                12:00 — 20:00
+              </span>
+              четвер
+            </p>
+            <p class="timetable__time">
+              <span class="timetable__time--bold">
+                12:00 — 20:00
+              </span>
+              п’ятниця
+            </p>
+            <p class="timetable__time">
+              <span class="timetable__time--bold">
+                11:00 — 19:00
+              </span>
+              субота
+            </p>
+            <p class="timetable__time">
+              <span class="timetable__time--bold">
+                11:00 — 19:00
+              </span>
+              неділя
+            </p>
+            <p class="timetable__text">
+              Вихідні понеділок,<br> вівторок<br>
+              Каса припиняє роботу за<br> 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+          <div class="information__contacts contacts">
+            <h4 class="contacts__title">
+              Контакти:
+            </h4>
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="tel:+38 (044) 278-74-54" class="contacts__link">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__menu">
+        <nav class="footer__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Відвідування
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Стати нашим другом
+              </a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Про нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Магазин
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Блог
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer__copyright">
+        <p>
+          Designed by Zhyriada Marina
+        </p>
+        <p>
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
