--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,16 @@
       </div>
       <span class="namu header__namu">Na<br>mu</span>
 
-      <div class="header__tickets">
-        <span class="tickets">
+      <div class="tickets header__tickets header__tickets--button">
+        <span class="tickets__text">
           Квитки
         </span>
-        <button class="button">
+
+        <button class="button header__button">
           >
         </button>
       </div>
+
 
       <span class="events header__events">
         Події
@@ -158,10 +160,38 @@
               class="photos__img photos__img--6"
             >
           </div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="subscription section__subscription">
+          <div class="subscription__image">
+            <p class="subscription__title">
+              Підписка
+            </p>
+            <p class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form class="form subscription__form">
+              <label for="form_email">
+                <input
+                  type="text"
+                  name="email"
+                  placeholder="E-mail"
+                  class="input form__input"
+                  id="form_email"
+                >
+              </label>
+              <button class="button subscription__button">
+                >
+              </button>
+            </form>
+          </div>
 
         </div>
-
       </section>
+
 
     </main>
 
