--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,60 @@
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header">
+      <input
+        id="menu"
+        type="checkbox"
+        class="header__toggle"
+        hidden
+      >
+      <section class="header__menu">
+        <div class="burgermenu">
+          <div class="burgermenu__item">Галерея</div>
+          <div class="burgermenu__item">Виставки та події</div>
+          <div class="burgermenu__item">Відвідування</div>
+          <div class="burgermenu__item">Стати нашим другом</div>
+          <div class="burgermenu__item">Про нас</div>
+          <div class="burgermenu__item">Магазин</div>
+          <div class="burgermenu__item">Блог</div>
+          <div class="burgermenu__item">Контакти</div>
+          <div class="burgermenu__socnetwork">
+            <div class="burgermenu__soc">
+              <a href="">
+                <svg
+                  class="burgermenu__link"
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M2.7196 4.64899C2.7196 5.2538 2.7196 7.9533 2.7196 7.9533H0.302532V11.9938H2.7196V24.0009H7.68478V11.9942H11.0166C11.0166 11.9942 11.3287 10.0568 11.4799 7.93841C11.0463 7.93841 7.70355 7.93841 7.70355 7.93841C7.70355 7.93841 7.70355 5.58776 7.70355 5.17573C7.70355 4.76282 8.24491 4.2074 8.77997 4.2074C9.31402 4.2074 10.4412 4.2074 11.4852 4.2074C11.4852 3.65727 11.4852 1.75647 11.4852 0.000976577C10.0915 0.000976577 8.50592 0.000976577 7.80701 0.000976577C2.59687 0.000697581 2.7196 4.04524 2.7196 4.64899Z" fill="black">
+                </svg>
+              </a>
+            </div>
+            <div class="burgermenu__soc">
+              <a href="">
+                <svg
+                  class="burgermenu__link"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z" fill="black">
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="header__text">ХУДОЖНІЙ МУЗЕЙ</div>
       <div class="header__background"></div>
       <div class="header__logo"></div>
-      <div class="header__burger"></div>
-      <div class="header__title"></div>
+      <label for="menu" class="header__burger"></label>
+
+      <div class="header__text-aft">ХУДОЖНІЙ МУЗЕЙ</div>
       <div class="header__buy">
         <button class="button">
           <div class="button__text">Купити</div>
@@ -20,8 +70,28 @@
         </button>
       </div>
     </header>
-    <nav id="menu">
-
-    </nav>
+    <main>
+      <section class="title">Актуальні події</section>
+      <section class="card">
+        <div class="card__image image__top"></div>
+        <div class="card__text">
+          <div>
+            <p class="card__type">ВИСТАВКА <a class="card__date">26.08-29.11.2019</a></p>
+            <strong class="card__name">Йду і повертаюсь</strong>
+            <p class="card__details">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+      </section>
+      <section class="card">
+        <div class="card__text">
+          <div>
+            <p class="card__type">ВИСТАВКА <a class="card__date">26.08-29.11.2019</a></p>
+            <strong class="card__name">І спогади і мрії</strong>
+            <p class="card__details">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </div>
+        <div class="card__image image__bottom"></div>
+      </section>
+    </main>
   </body>
 </html>
