--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,9 @@
         </div>
         <div class="card__image image__bottom"></div>
       </section>
+      <section class="cover">
+
+      </section>
     </main>
   </body>
 </html>
