--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,9 @@
         <div class="header__logo">
           Na<br>mu
         </div>
-        <span class="header__transparent">ній</span>
+        <span class="header__transparent" aria-hidden="true">
+          ній
+        </span>
       </div>
     </header>
     <main>
@@ -203,7 +205,100 @@
       </section>
     </main>
     <footer class="footer">
-
+      <section class="footer__section">
+        <div class="footer__left">
+          <div class="footer__icon">
+            <div class="footer__logo">
+              Na<br>mu
+            </div>
+            <div class="footer__links">
+              <p class="fab fa-facebook-f"></p>
+              <p class="fab fa-instagram"></p>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__timetable">
+              <h5 class="footer__title">
+                Графік роботи
+              </h5>
+              <p class="footer__day">
+                <strong>12:00 — 20:00</strong> середа
+              </p>
+              <p class="footer__day">
+                <strong>12:00 — 20:00</strong> четверг
+              </p>
+              <p class="footer__day">
+                <strong>12:00 — 20:00</strong> п’ятниця
+              </p>
+              <p class="footer__day">
+                <strong>11:00 — 19:00</strong> субота
+              </p>
+              <p class="footer__day">
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+              <p class="footer__text">
+                Вихідні понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <h5 class="footer__title">Контакти:</h5>
+            <a class="footer__link" href="https://goo.gl/maps/tcm2nm8gpd7VNFbo9">
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>
+            <a class="footer__link" href="tel:+380442781357">
+              тел. +38 (044) 278-13-57
+            </a>
+            <br>
+            <a class="footer__link" href="tel:+380442781357">
+              факс +38 (044) 278-74-54
+            </a>
+            <br>
+            <a class="footer__link" href="mailto: info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+        <div class="footer__right">
+          <nav class="menu footer__menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Відвідування</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Стати нашим другом</a>
+              </li>
+            </ul>
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Магазин</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Блог</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <div class="footer__bottom">
+        <p class="footer__copyright">Copyright © 2021. All Rights Reserved.</p>
+        <p class="footer__designer">Designed by Zhyriada Marina</p>
+      </div>
     </footer>
     <script src="https://kit.fontawesome.com/fbd2e65cde.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
